<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <FrameLayout
        android:id="@+id/frag"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </FrameLayout>
    <RadioGroup
        android:id="@+id/tab_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="3dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/dp_5"
    >

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:id="@+id/radiobutton_firstpage"
            android:drawableTop="@drawable/tab_firstpage"
            android:gravity="center"
            android:text="@string/firstpage"
            android:drawablePadding="@dimen/dp_4"
            android:textColor="@drawable/tab_text_color"
            android:textSize="@dimen/sp_10"
            android:textStyle="normal">
        </RadioButton>

        <RadioButton
            android:layout_width="0dp"
            android:id="@+id/radiobutton_notification"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawablePadding="@dimen/dp_4"
            android:drawableTop="@drawable/tab_notification"
            android:gravity="center"
            android:text="@string/vip"
            android:textColor="@drawable/tab_text_color"
            android:textSize="@dimen/sp_10"
            android:textStyle="normal">
        </RadioButton>


        <RadioButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawablePadding="@dimen/dp_4"
            android:id="@+id/radiobutton_shopcart"
            android:drawableTop="@drawable/tab_shopcart"
            android:gravity="center"
            android:text="@string/shopcart"
            android:textColor="@drawable/tab_text_color"
            android:textSize="@dimen/sp_10"
            android:textStyle="normal">
        </RadioButton>

    </RadioGroup>


</LinearLayout>