<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/sss"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".home.activity.CardRechageActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/dp_44"
            android:padding="@dimen/dp_18"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back_black" />

        <com.edencity.customer.custum.MyMediumTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recharge_card"
            android:textColor="#333333"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/smart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/pay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <com.scwang.smartrefresh.layout.header.ClassicsHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dp_3"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:id="@+id/card_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_24"
                    android:layout_margin="@dimen/dp_5"
                    android:visibility="gone"
                    app:cardCornerRadius="@dimen/dp_12"
                    app:cardElevation="@dimen/dp_5"
                    app:cardMaxElevation="@dimen/dp_5">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/dp_10"
                            android:background="@mipmap/speak" />

                        <com.edencity.customer.custum.MyMediumTextView
                            android:id="@+id/go_on_money"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|right"
                            android:layout_marginLeft="@dimen/dp_16"
                            android:layout_marginRight="@dimen/dp_10"
                            android:text=""
                            android:textColor="@color/blue_nomal"
                            android:textSize="@dimen/sp_13"
                            android:textStyle="bold" />

                        <com.edencity.customer.custum.MyNormalTextView
                            android:id="@+id/natification"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/dp_10"
                            android:layout_weight="1"
                            android:ellipsize="marquee"
                            android:marqueeRepeatLimit="marquee_forever"
                            android:singleLine="true"
                            android:text=""
                            android:textColor="#666666"
                            android:textSize="@dimen/sp_10" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/card"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_100"
                    android:layout_marginHorizontal="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginBottom="7dp"
                    android:background="@drawable/bg_card_normal">

                    <com.edencity.customer.custum.MyMediumTextView
                        android:id="@+id/recharge_total_money"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="0.00"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_20"
                        app:layout_constraintStart_toStartOf="@+id/rechage_price"
                        app:layout_constraintTop_toBottomOf="@+id/rechage_price" />

                    <com.edencity.customer.custum.MyNormalTextView
                        android:id="@+id/rechage_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:text="@string/card_balance"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_15"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </android.support.constraint.ConstraintLayout>

                <com.edencity.customer.custum.MyMediumTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_10"
                    android:layout_marginVertical="@dimen/dp_8"
                    android:text="@string/rechage_money"
                    android:textColor="#333333"
                    android:textSize="@dimen/sp_15"
                    android:textStyle="normal" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rlv_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_6"
                    android:layout_marginVertical="@dimen/dp_2" />

                <com.edencity.customer.custum.MyMediumTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:text="@string/pay_type"
                    android:textColor="#333333"
                    android:textSize="@dimen/sp_15"
                    android:textStyle="normal" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rlv_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_6"
                    android:layout_marginVertical="@dimen/dp_8" />

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

    </com.scwang.smartrefresh.layout.SmartRefreshLayout>

    <com.edencity.customer.custum.MyMediumTextView
        android:id="@+id/pay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/blue_nomal"
        android:gravity="center"
        android:text="立即支付"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/frag"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>